Bug-2606: (squashable) removing duplicates from filters

--- a/koha-tmpl/intranet-tmpl/prog/css/datatables.css
+++ b/koha-tmpl/intranet-tmpl/prog/css/datatables.css
@@ -101,6 +101,9 @@ div.dataTables_paginate {
     background-repeat: no-repeat;
     color : #0000CC;
 }
+.paging_full_numbers a.paginate_button.current{
+    background-color : #bcbcbc;
+}
 .paging_full_numbers a.paginate_button.first {
     background-color: transparent;
     background-image : url('../img/first.png');
